# obs-ffmpeg-afilter

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec-win.json  buildspec.json  obs-ffmpeg-afilter.cpp  version.rc.in
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/workflows/: build-project.yaml  main.yml  pr-pull.yaml  push.yaml
ci/: build.bat
cibuild/: Program.cs
cmake/common/: buildspec_common.cmake
src/: obs-ffmpeg-afilter.cpp  plugin-macros.generated.h
